--- a/bindings/typescript/test/index.html
+++ b/bindings/typescript/test/index.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 
-<h1>Base64 Encode Tests</h1>
-<pre id="base64-encode-assershins"></pre>
+<h1>Base64 Encode/Decode Tests</h1>
+
+<p>Current case: <span id="b64-current-case"></span></p>
+<p>Total cases: <span id="b64-total-cases"></span></p>
+<button id="b64-go">Go!</button>
+
+<pre id="b64-assershins"></pre>
 
 <script type="module" src="dist/test.js"></script>
 </body>
