--- a/bindings/typescript/test/index.html
+++ b/bindings/typescript/test/index.html
@@ -6,13 +6,19 @@
 </head>
 <body>
 
+<h1>Base58 Encode/Decode Tests</h1>
+    <p>Current case: <span id="b58-current-case"></span></p>
+    <p>Total cases: <span id="b58-total-cases"></span></p>
+    <button id="b58-go">Go!</button>
+    <h5>Failed case log:</h5>
+    <pre id="b58-assershins"></pre>
+
 <h1>Base64 Encode/Decode Tests</h1>
-
-<p>Current case: <span id="b64-current-case"></span></p>
-<p>Total cases: <span id="b64-total-cases"></span></p>
-<button id="b64-go">Go!</button>
-
-<pre id="b64-assershins"></pre>
+    <p>Current case: <span id="b64-current-case"></span></p>
+    <p>Total cases: <span id="b64-total-cases"></span></p>
+    <button id="b64-go">Go!</button>
+    <h5>Failed case log:</h5>
+    <pre id="b64-assershins"></pre>
 
 <script type="module" src="dist/test.js"></script>
 </body>
