my ts rlp decoder seems to work
i feel like i would have more confidence in my code if i didn't test it

--- a/bindings/typescript/test/index.html
+++ b/bindings/typescript/test/index.html
@@ -20,6 +20,13 @@
     <h5>Failed case log:</h5>
     <pre id="b64-assershins"></pre>
 
+<h1>RLP Encode/Decode Tests</h1>
+    <p>Current case: <span id="rlp-current-case"></span></p>
+    <p>Total cases: <span id="rlp-total-cases"></span></p>
+    <button id="rlp-go">Go!</button>
+    <h5>Failed case log:</h5>
+    <pre id="rlp-assershins"></pre>
+
 <script type="module" src="dist/test.js"></script>
 </body>
 </html>
