[wip] start work on api deconstructor

--- a/bindings/typescript/test/index.html
+++ b/bindings/typescript/test/index.html
@@ -27,6 +27,11 @@
     <h5>Failed case log:</h5>
     <pre id="rlp-assershins"></pre>
 
+<h1>Tx Decoding</h1>
+    <input style="width: 800px;" type="text" id="tx-stuff" value="tx_+FgMAaEByWN+RgDnqzvC5n/GQOgjdkRE9DBV2l1VeKSaN1r6GNyhAXtm5sMFBwg25Ol5IFI9w+pZy7/YbFi6BwPqi80KuKdsCoYPJvVhyAAACYdoYWluYW5hA7ZC1w=="></input>
+    <button id="tx-go">Go!</button>
+
+
 <script type="module" src="dist/test.js"></script>
 </body>
 </html>
