--- a/sidekick/examples/connection.html
+++ b/sidekick/examples/connection.html
@@ -70,6 +70,8 @@
 
 
 <h1>5. Sign a message</h1>
+    <textarea id="message-text" rows="5" cols="80">MESSSSSSSSSSAGGGGGGGGGGGGGGGGGGGGGGGGGGGE</textarea>
+    <br>
     <button id="sign-message">Sign Message</button>
 
 <!-- script -->
