have transitioned jr to typescript

--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -25,6 +25,6 @@
 <!-- including nacl here -->
 <script src="nacl.js"></script>
 
-<script type="module" src="popup.js"></script>
+<script type="module" src="dist/popup.js"></script>
 </body>
 </html>
