--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
+    <!--
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./ext/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
+    -->
+    <style type="text/css">
+        body {
+            background:  #d6efff;
+            width: 400px;
+            font-family: monospace, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
 
-<h1>Jack Russell</h1>
+<table width="100%" style="background: #dad1ff; border: 2px solid #6c5d96; border-radius: 5px;">
+    <tr>
+        <td><img src="./icons/jrx-icon-48.png" style="width: 32px; height: 32px;"></td>
+        <td style="font-size: 32px; text-align: center; font-weight: bold">
+            JÆCK RUSSELL
+        </td>
+    </tr>
+</table>
 
-<button id="mk-detectable">Make Wallet Detectable for 2 Minutes</button>
-<br>
-
-<h2>Keypairs</h2>
-
-    <p id="no-keypairs" hidden>No keypairs yet. Click the button below to generate one.</p>
-    <br>
-
-    <ul id="keypairs" hidden></ul>
-    <br>
-
-    <button id="generate">Generate New Keypair</button>
-    <br>
-
-    <button id="recover" disabled>Recover Key Tree from Seed Phrase (NYI)</button>
-
-
-<h2>Log</h2>
-    <pre id="log"></pre>
+<div style="margin-top: 5px; width: 95%; background: #d9ffd6; border: 1px solid #6c5d96; border-radius: 5px;">
+    <table >
+        <tr>
+            <td><img src="./ext/icons/keypair.svg" style="width: 32px; height: 32px;"></td>
+            <td style="justify-content: center; font-size: 28px; text-align: center; font-weight: bold">
+                KEYPAIRS
+            </td>
+        </tr>
+    </table>
+</div>
 
 
 <!-- including nacl here -->
 <script src="nacl.js"></script>
 <script type="module" src="dist/popup.js"></script>
 
+<!--
+    bootstrap etc
+    <script src="./ext/popper-2.11.7/popper.min.js"></script>
+    <script src="./ext/bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
+-->
 
 </body>
 </html>
