just trying to get a bad jr working so it works

--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -35,6 +35,7 @@
             </td>
         </tr>
     </table>
+    <button id="generate_keypair_button">Generate New Keypair</button>
 </div>
 
 
