--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -35,19 +35,18 @@
             </td>
         </tr>
     </table>
-    <button id="generate_keypair_button">Generate New Keypair</button>
+    <ul id="keypairs">
+    </ul>
+    <button id="generate">Generate New Keypair</button>
 </div>
+
+<pre id="scratch">
+</pre>
 
 
 <!-- including nacl here -->
 <script src="nacl.js"></script>
 <script type="module" src="dist/popup.js"></script>
-
-<!--
-    bootstrap etc
-    <script src="./ext/popper-2.11.7/popper.min.js"></script>
-    <script src="./ext/bootstrap-5.3.0-alpha3-dist/js/bootstrap.min.js"></script>
--->
 
 </body>
 </html>
