jr code cleanups

--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -37,7 +37,6 @@
     </table>
     <ul id="keypairs">
     </ul>
-    <button id="generate">Generate New Keypair</button>
 </div>
 
 <pre id="scratch">
@@ -45,7 +44,7 @@
 
 
 <!-- including nacl here -->
-<script src="nacl.js"></script>
+<script src="dist/jex_include/local-nacl-1.0.3/nacl.js"></script>
 <script type="module" src="dist/popup.js"></script>
 
 </body>
