have page script talking to controller

--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -19,7 +19,7 @@
 
 <table width="100%" style="background: #dad1ff; border: 2px solid #6c5d96; border-radius: 5px;">
     <tr>
-        <td><img src="./icons/jrx-icon-48.png" style="width: 32px; height: 32px;"></td>
+        <td><img src="./art/jrx-icon-48.png" style="width: 32px; height: 32px;"></td>
         <td style="font-size: 32px; text-align: center; font-weight: bold">
             JÆCK RUSSELL
         </td>
@@ -29,7 +29,7 @@
 <div style="margin-top: 5px; width: 95%; background: #d9ffd6; border: 1px solid #6c5d96; border-radius: 5px;">
     <table >
         <tr>
-            <td><img src="./ext/icons/keypair.svg" style="width: 32px; height: 32px;"></td>
+            <td><img src="./art/keypair.svg" style="width: 32px; height: 32px;"></td>
             <td style="justify-content: center; font-size: 28px; text-align: center; font-weight: bold">
                 KEYPAIRS
             </td>
