--- a/sidekick_examples/connection.html
+++ b/sidekick_examples/connection.html
@@ -62,11 +62,17 @@
         <ol>
         <li><pre class="pv-spendtx-base64"></pre></li>
         </ol>
-        <button id="sign-spendtx">Sign Transaction</button>
+
+        <button id="sign-spendtx">Sign Transaction but do not propagate</button>
         <h5>Result:</h5>
             <pre id="sign-spendtx-result"></pre>
-    <h2>4.4 Propagate the transaction (parasite)</h2>
-    <h2>4.5 Verify the transaction was propagated (parasite)</h2>
+
+        <br>
+        <button id="sign-spendtx-prop">Sign Transaction and have superhero propagate transaction</button>
+        <h5>Result:</h5>
+            <pre id="sign-spendtx-prop-result"></pre>
+    <h2>4.4 Propagate the transaction (parasite) FIXME</h2>
+    <h2>4.5 Verify the transaction was propagated (parasite) FIXME</h2>
 
 
 <h1>5. Sign a message</h1>
