shift script include URLs to be relative

--- a/jrx/background.html
+++ b/jrx/background.html
@@ -76,12 +76,12 @@
             And i discovered a future potential pitfall
         -->
 
-        <script src="dist/jex_include/local-tweetnacl-1.0.3/dist/nacl.js"></script>
+        <script src="./dist/jex_include/local-tweetnacl-1.0.3/dist/nacl.js"></script>
 
         <!--
             this is a non-issue
         -->
         <script type="module"
-                src="dist/background.js"></script>
+                src="./dist/background.js"></script>
     </body>
 </html>
