--- a/jrx/popup.html
+++ b/jrx/popup.html
@@ -43,6 +43,6 @@
 </pre>
 
 
-<script type="module" src="dist/popup.js"></script>
+<script type="module" src="./dist/popup.js"></script>
 </body>
 </html>
