jr can now make an account on aegora

--- a/jrx/background.html
+++ b/jrx/background.html
@@ -78,10 +78,13 @@
 
         <script src="./dist/jex_include/local-tweetnacl-1.0.3/dist/nacl.js"></script>
 
+        <!--  same but for blakejs
+        <script src="./dist/jex_include/local-blakejs-1.2.1/dist/index.js"></script>
+        -->
+
         <!--
             this is a non-issue
         -->
-        <script type="module"
-                src="./dist/background.js"></script>
+        <script type="module" src="./dist/background.js"></script>
     </body>
 </html>
