craig says i need more callbacks

--- a/jrx/pages/background.html
+++ b/jrx/pages/background.html
@@ -76,7 +76,7 @@
             And i discovered a future potential pitfall
         -->
 
-        <script src="./dist/jex_include/local-tweetnacl-1.0.3/dist/nacl.js"></script>
+        <script src="../dist/jex_include/local-tweetnacl-1.0.3/dist/nacl.js"></script>
 
         <!--  same but for blakejs
         <script src="./dist/jex_include/local-blakejs-1.2.1/dist/index.js"></script>
@@ -85,6 +85,6 @@
         <!--
             this is a non-issue
         -->
-        <script type="module" src="./dist/background.js"></script>
+        <script type="module" src="../dist/background.js"></script>
     </body>
 </html>
