--- a/jrx/pages/popup.html
+++ b/jrx/pages/popup.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!--
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./ext/bootstrap-5.3.0-alpha3-dist/css/bootstrap.min.css">
-    -->
     <style type="text/css">
         body {
             background:  #d6efff;
@@ -19,7 +15,7 @@
 
 <table width="100%" style="background: #dad1ff; border: 2px solid #6c5d96; border-radius: 5px;">
     <tr>
-        <td><img src="./art/jrx-icon-48.png" style="width: 32px; height: 32px;"></td>
+        <td><img src="../art/jrx-icon-48.png" style="width: 32px; height: 32px;"></td>
         <td style="font-size: 32px; text-align: center; font-weight: bold">
             JÆCK RUSSELL
         </td>
@@ -29,7 +25,7 @@
 <div style="margin-top: 5px; width: 95%; background: #d9ffd6; border: 1px solid #6c5d96; border-radius: 5px;">
     <table >
         <tr>
-            <td><img src="./art/keypair.svg" style="width: 32px; height: 32px;"></td>
+            <td><img src="../art/keypair.svg" style="width: 32px; height: 32px;"></td>
             <td style="justify-content: center; font-size: 28px; text-align: center; font-weight: bold">
                 KEYPAIRS
             </td>
@@ -63,7 +59,7 @@
 <div style="margin-top: 5px; width: 95%; background: #d9ffd6; border: 1px solid #6c5d96; border-radius: 5px;">
     <table>
         <tr>
-            <td><img src="./art/keypair.svg" style="width: 32px; height: 32px;"></td>
+            <td><img src="../art/keypair.svg" style="width: 32px; height: 32px;"></td>
             <td style="justify-content: center; font-size: 28px; text-align: center; font-weight: bold">
                 KEYPAIRS
             </td>
