fixed callback issue

--- a/jrx/pages/msg_confirm.html
+++ b/jrx/pages/msg_confirm.html
@@ -14,7 +14,7 @@
 <br>
 <button id="bad">Bad</button>
 
-<script type="module" src="./msg_confirm.js"></script>
+<script type="module" src="../dist/msg_confirm.js"></script>
 
 <body>
 </html>
