msg confirm sends back error if user rejects tx

--- a/jrx/pages/msg_confirm.html
+++ b/jrx/pages/msg_confirm.html
@@ -5,14 +5,14 @@
     <title>Is this message good or bad?</title>
 </head>
 <body>
-<h1>Is this message good or bad?</h1>
+<h1>Do you want to sign this message?</h1>
 
 <pre id="message"></pre>
 
 <br>
-<button id="good">Good</button>
+<button id="good">Yes</button>
 <br>
-<button id="bad">Bad</button>
+<button id="bad">No</button>
 
 <script type="module" src="../dist/msg_confirm.js"></script>
 
